# exchange-gate

./: .env  Cargo.toml  build.rs
proto/: ex_gate.proto
src/: binance.rs  client.rs  error.rs  ex_grpc.rs  main.rs
