[package]
name = "exchange-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3", features = ["tower-compat"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
prost = "0.9.0"
tonic = "0.6.2"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror= "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.5.2"

[[bin]]
name = "client"
path = "src/client.rs"